adding everything to app

--- a/app.nw/src/app/language/ar.json
+++ b/app.nw/src/app/language/ar.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "يتم تشغيل Popcorn Time. يرجى الإنتظار",
     "Status: Checking Database...": "الحالة : يجري فحص قاعدة البيانات...",
     "Movies": "أفلام",
-    "TV Series": "مسلسلات",
+    "Movies ": "أفلام",
+    "Movies  ": "أفلام",
+    "Series": "مسلسلات",
     "Anime": "انمي",
     "Genre": "النوع",
     "All": "الكل",
@@ -382,7 +384,7 @@
     "ATTENTION! We need admin access to run this command.": "انتبه ! نحتاج لصلاحية المسؤول لتشغيل هذا الأمر.",
     "Your password is not saved": "لم يتم حفظ كلمة السر",
     "Enter sudo password :": "أدخل كلمة السر:",
-    "Status: Monitoring connection": "Status: Monitoring connection",
+    "Status: Monitoring connection": "الحالة: تفعيل الإتصال",
     "Status: Connected": "الحالة: متصل",
     "Secure connection": "إتصال محمي",
     "Your IP:": "الآي بي الخاص بك:",
