--- a/app.nw/src/app/language/bg.json
+++ b/app.nw/src/app/language/bg.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Стартиране на PopcornTime. Моля изчакайте...",
     "Status: Checking Database...": "Състояние: Проверка на базата данни...",
     "Movies": "Филми",
-    "TV Series": "Сериали",
+    "Movies ": "Филми",
+    "Movies  ": "Филми",
+    "Series": "Сериали",
     "Anime": "Аниме",
     "Genre": "Жанр",
     "All": "Всички",
