--- a/app.nw/src/app/language/bn.json
+++ b/app.nw/src/app/language/bn.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "পপকর্ন টাইম আরম্ভ করা হচ্ছে। দয়া করে অপেক্ষা করুন...",
     "Status: Checking Database...": "অবস্থা: ডাটাবেস পরীক্ষা করা হচ্ছে...",
     "Movies": "চলচ্চিত্র",
-    "TV Series": "টিভি ধারাবাহিক",
+    "Movies ": "চলচ্চিত্র",
+    "Movies  ": "চলচ্চিত্র",
+    "Series": "টিভি ধারাবাহিক",
     "Anime": "অ্যানিমে",
     "Genre": "ধরণ",
     "All": "সব",
