--- a/app.nw/src/app/language/br.json
+++ b/app.nw/src/app/language/br.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Emañ o teraouiñ PopcornTime. Gortozit mar-plij...",
     "Status: Checking Database...": "Statud: O wiriañ an Diaz-Roadennoù...",
     "Movies": "Filmoù",
-    "TV Series": "Heuliadennoù Skinwel",
+    "Movies ": "Filmoù",
+    "Movies  ": "Filmoù",
+    "Series": "Heuliadennoù Skinwel",
     "Anime": "Tesadennoù-Bev",
     "Genre": "Rumm",
     "All": "Holl",
