--- a/app.nw/src/app/language/ca.json
+++ b/app.nw/src/app/language/ca.json
@@ -2,10 +2,12 @@
     "External Player": "Reproductor extern",
     "Made with": "Fet amb",
     "by a bunch of geeks from All Around The World": "per un grapat de geeks d'arreu del món",
-    "Initializing PopcornTime. Please Wait...": "S'està inicialitzant el PopcornTime, espereu...",
-    "Status: Checking Database...": "Estat: S'està comprovant la base de dades...",
+    "Initializing PopcornTime. Please Wait...": "S'està inicialitzant PopcornTime, espereu...",
+    "Status: Checking Database...": "Estat: S'està comprovant base de dades...",
     "Movies": "Pel·lícules",
-    "TV Series": "Sèries de TV",
+    "Movies ": "Pel·lícules",
+    "Movies  ": "Pel·lícules",
+    "Series": "Sèries de TV",
     "Anime": "Anime",
     "Genre": "Gènere",
     "All": "Tots",
@@ -202,7 +204,7 @@
     "Restart Now": "Reinicia ara",
     "We are flushing your subtitle cache": "S'està esborrant la memòria cau dels subtítols",
     "Subtitle cache deleted": "S'ha esborrat la memòria cau dels subtítols",
-    "Please select a file to play": "Seleccioneu un fitxer a reproduir",
+    "Please select a file to play": "Seleccioneu un fitxer per reproduir",
     "Test Login": "Test d'inici de sessió",
     "Testing...": "S'està provant...",
     "Success!": "Èxit!",
@@ -267,14 +269,14 @@
     "Once the movie is fully downloaded, you continue to send parts to the other users. And everything is deleted from your computer when you close Popcorn Time. As simple as that.": "Quan la pel·lícula s'ha baixat completament, seguiu enviant parts als altres usuaris. I tot s'elimina de l'ordinador una vegada tancat el Popcorn Time. Tan simple com això.",
     "The application itself is built with Node-Webkit, HTML, CSS and Javascript. It works like the Google Chrome browser, except that you host the biggest part of the code on your computer. Yes, Popcorn Time works on the same technology as a regular website, like... let's say Wikipedia, or Youtube!": "L'aplicació en sí està construïda amb Node-Webkit, HTML, CSS i Javascript. Funciona com el navegador Google Chrome, llevat que allotja la major part del codi a l'ordinador. Això és, el Popcorn Time funciona amb la mateixa tecnologia que un lloc web normal, com... diguem Wikipedia, o Youtube.",
     "I found a bug, how do I report it?": "He trobat un error, com poc informar-hi?",
-    "No historics found...": "No s'ha trobat cap històric...",
-    "Error, database is probably corrupted. Try flushing the history in settings.": "Error, la base de dades està probablement corrupta. Proveu a esborrar l'històric a la configuració.",
+    "No historics found...": "No s'han trobat històrics...",
+    "Error, database is probably corrupted. Try flushing the history in settings.": "Error, base de dades probablement corrupta. Proveu a esborrar l'històric a les opcions.",
     "You can paste magnet links anywhere in Popcorn Time with CTRL+V.": "Podeu enganxar enllaços magnètics a tot arreu a Popcorn Time amb Ctrl+V",
     "You can drag & drop a .torrent file into Popcorn Time.": "Podeu arrossegar i deixar anar fitxers .torrent a Popcorn Time.",
-    "The Popcorn Time project started in February 2014 and has already had 150 people that contributed more than 3000 times to it's development in August 2014.": "El projecte Popcorn Time es va iniciar al Febrer de 2014 i, només a l'Agost d'aquell any, 150 persones van contribuir més de 3000 vegades al seu desenvolupament.",
+    "The Popcorn Time project started in February 2014 and has already had 150 people that contributed more than 3000 times to it's development in August 2014.": "El projecte Popcorn Time es va iniciar al Febrer de 2014 i, només a l'Agost d'aquell any, 150 persones van contribuir més de 3000 cops al seu desenvolupament.",
     "The rule n°10 applies here.": "La norma número 10 s'aplica aquí.",
     "If a subtitle for a TV series is missing, you can add it on %s. And the same way for a movie, but on %s.": "Si falta el subtítol d'una serie, es por afegir a %s. I el mateix per a les pel·lícules però a %s",
-    "If you're experiencing connection drop issues, try to reduce the DHT Limit in settings.": "Si experimenteu problemes de connexió, proveu a reduir el limit DHT a la configuració.",
+    "If you're experiencing connection drop issues, try to reduce the DHT Limit in settings.": "Si experimenteu problemes de connexió, proveu a reduir el limit de DHT a la configuració.",
     "If you search \"1998\", you can see all the movies or TV series that came out that year.": "Cerqueu «1998» per veure totes les pel·lícules que es van estrenar aquell any.",
     "You can login to Trakt.tv to save all your watched items, and synchronize them across multiple devices.": "Podeu iniciar sessió a Trakt.tv per desar tots els elements vists i sincronitzar-los amb diversos dispositius.",
     "Clicking on the rating stars will display a number instead.": "En clicar les estrelles de valoració es mostrarà el número corresponent.",
@@ -282,9 +284,9 @@
     "You can find out more about a movie or a TV series? Just click the IMDb icon.": "Voleu saber més sobre una pel·lícula o una sèrie? Cliqueu sobre la icona d'IMDb.",
     "Clicking twice on a \"Sort By\" filter reverses the order of the list.": "En clicar dues vegades al filtre «Ordena per» s'invertirà l'ordre de la llista.",
     "Switch to next tab": "Canvia a la pestanya següent",
-    "Switch to previous tab": "Canvia a la pestanya anterior",
+    "Switch to previous tab": "Canvia a pestanya anterior",
     "Switch to corresponding tab": "Canvia a la pestanya corresponent",
-    "through": "a través de",
+    "through": "a través",
     "Enlarge Covers": "Engrandeix les portades",
     "Reduce Covers": "Redueix les portades",
     "Open the Help Section": "Obre la secció d'ajuda",
@@ -294,8 +296,8 @@
     "Open this screen": "Obre aquesta pantalla",
     "Open Settings": "Obre la Configuració",
     "Posters Size": "Mida dels cartells",
-    "This feature only works if you have your TraktTv account synced. Please go to Settings and enter your credentials.": "Aquesta característica només funciona si teniu el compte de TraktTv sincronitzat. Aneu a la Configuració per a introduir les credencials.",
-    "Last Open": "Última oberta",
+    "This feature only works if you have your TraktTv account synced. Please go to Settings and enter your credentials.": "Aquesta característica només funciona si teniu el compte de TraktTv sincronitzat. Aneu a Configuració per introduir les credencials.",
+    "Last Open": "Últim obert",
     "Exporting Database...": "S'està exportant la base de dades...",
     "Database Successfully Exported": "La base de dades s'ha exportat correctament",
     "Display": "Visualització",
@@ -305,11 +307,11 @@
     "date": "data",
     "year": "any",
     "rating": "valoració",
-    "updated": "actualitzada",
+    "updated": "actualitzat",
     "name": "nom",
     "OVA": "OVA",
     "ONA": "ONA",
-    "No anime found...": "No s'ha trobat l'anime...",
+    "No anime found...": "Anime no trobat...",
     "Movie": "Pel·lícula",
     "Special": "Especial",
     "No Watchlist found...": "No s'ha trobat cap llista de reproducció...",
