--- a/app.nw/src/app/language/cs.json
+++ b/app.nw/src/app/language/cs.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Inicializace PopcornTime. Čekejte prosím...",
     "Status: Checking Database...": "Stav: Kontrola databáze...",
     "Movies": "Filmy",
-    "TV Series": "TV Seriály",
+    "Movies ": "Filmy",
+    "Movies  ": "Filmy",
+    "Series": "TV Seriály",
     "Anime": "Anime",
     "Genre": "Žánr",
     "All": "Vše",
