--- a/app.nw/src/app/language/da.json
+++ b/app.nw/src/app/language/da.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Vent venligst, mens Popcorn Time starter...",
     "Status: Checking Database...": "Status: Tjekker database...",
     "Movies": "Film",
-    "TV Series": "TV-serier",
+    "Movies ": "Film",
+    "Movies  ": "Film",
+    "Series": "TV-serier",
     "Anime": "Anime",
     "Genre": "Genre",
     "All": "Alle",
