--- a/app.nw/src/app/language/de.json
+++ b/app.nw/src/app/language/de.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Initialisiere PopcornTime. Bitte warten …",
     "Status: Checking Database...": "Status: Überprüfe Datenbank...",
     "Movies": "Filme",
-    "TV Series": "Fernsehserien",
+    "Movies ": "Filme",
+    "Movies  ": "Filme",
+    "Series": "Fernsehserien",
     "Anime": "Anime",
     "Genre": "Genre",
     "All": "Alle",
