--- a/app.nw/src/app/language/el.json
+++ b/app.nw/src/app/language/el.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Γίνεται εκκίνηση του PopcornTime. Παρακαλώ περιμένετε...",
     "Status: Checking Database...": "Κατάσταση: Έλεγχος βάσης δεδομένων...",
     "Movies": "Ταινίες",
-    "TV Series": "Τηλεοπτικές σειρές",
+    "Movies ": "Ταινίες",
+    "Movies  ": "Ταινίες",
+    "Series": "Σειρές",
     "Anime": "Άνιμε",
     "Genre": "Είδος",
     "All": "Όλα",
