--- a/app.nw/src/app/language/et.json
+++ b/app.nw/src/app/language/et.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Käivitan Popcorn Time`i. Palun Oota...",
     "Status: Checking Database...": "Olek: Kontrollin Andmebaasi...",
     "Movies": "Filmid",
-    "TV Series": "TV Seriaalid",
+    "Movies ": "Filmid",
+    "Movies  ": "Filmid",
+    "Series": "TV Seriaalid",
     "Anime": "Anime",
     "Genre": "Žanr",
     "All": "Kõik",
