--- a/app.nw/src/app/language/eu.json
+++ b/app.nw/src/app/language/eu.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Popcorn Time abiarazten. Itxaron mesedez...",
     "Status: Checking Database...": "Egoera: Datu-basea egiaztatzen...",
     "Movies": "Filmak",
-    "TV Series": "Telesailak",
+    "Movies ": "Filmak",
+    "Movies  ": "Filmak",
+    "Series": "Telesailak",
     "Anime": "Animea",
     "Genre": "Mota",
     "All": "Denak",
