--- a/app.nw/src/app/language/fa.json
+++ b/app.nw/src/app/language/fa.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "...لطفا منتظر بمانید Popcorn Time در حال بارگذاری اولیه‌ی",
     "Status: Checking Database...": "وضعیت: بررسی پایگاه داده...",
     "Movies": "فیلم‌ها",
-    "TV Series": "سریال‌ها",
+    "Movies ": "فیلم‌ها",
+    "Movies  ": "فیلم‌ها",
+    "Series": "سریال‌ها",
     "Anime": "اَنیمه",
     "Genre": "نوع فیلم",
     "All": "همه",
