--- a/app.nw/src/app/language/fi.json
+++ b/app.nw/src/app/language/fi.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Avataan Popcorn Time...",
     "Status: Checking Database...": "Tarkistetaan tietokantaa...",
     "Movies": "Elokuvat",
-    "TV Series": "TV-sarjat",
+    "Movies ": "Elokuvat",
+    "Movies  ": "Elokuvat",
+    "Series": "TV-sarjat",
     "Anime": "Anime",
     "Genre": "Kategoria",
     "All": "Kaikki",
