--- a/app.nw/src/app/language/fr.json
+++ b/app.nw/src/app/language/fr.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Démarrage de Popcorn Time. Veuillez patienter…",
     "Status: Checking Database...": "Statut : Vérification de la base de données…",
     "Movies": "Films",
-    "TV Series": "Séries TV",
+    "Movies ": "Films",
+    "Movies  ": "Films",
+    "Series": "Séries TV",
     "Anime": "Anime",
     "Genre": "Genre",
     "All": "Tous",
