--- a/app.nw/src/app/language/gl.json
+++ b/app.nw/src/app/language/gl.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Iniciando o Popcorn Time. Por favor, acouga un intre...",
     "Status: Checking Database...": "Estado: Chequeando a Base de Datos...",
     "Movies": "Filmes",
-    "TV Series": "Series de TV",
+    "Movies ": "Filmes",
+    "Movies  ": "Filmes",
+    "Series": "Series de TV",
     "Anime": "Anime",
     "Genre": "Xénero",
     "All": "Todos",
