--- a/app.nw/src/app/language/he.json
+++ b/app.nw/src/app/language/he.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "מאתחל את PopcornTime. אנא המתינו..",
     "Status: Checking Database...": "סטטוס: בודק מסד נתונים...",
     "Movies": "סרטים",
-    "TV Series": "סדרות",
+    "Movies ": "סרטים",
+    "Movies  ": "סרטים",
+    "Series": "סדרות",
     "Anime": "אנימה",
     "Genre": "ז'אנר",
     "All": "הכל",
