--- a/app.nw/src/app/language/hr.json
+++ b/app.nw/src/app/language/hr.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Pokretanje Popcorn Timea. Pričekajte...",
     "Status: Checking Database...": "Stanje: provjeravanje baze podataka...",
     "Movies": "Filmovi",
-    "TV Series": "TV serije",
+    "Movies ": "Filmovi",
+    "Movies  ": "Filmovi",
+    "Series": "TV serije",
     "Anime": "Anime",
     "Genre": "Žanr",
     "All": "Sve",
