--- a/app.nw/src/app/language/hu.json
+++ b/app.nw/src/app/language/hu.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "PopcornTime indítása. Kérlek várj...",
     "Status: Checking Database...": "Állapot: Adatbázis ellenőrzése...",
     "Movies": "Filmek",
-    "TV Series": "Sorozatok",
+    "Movies ": "Filmek",
+    "Movies  ": "Filmek",
+    "Series": "Sorozatok",
     "Anime": "Anime",
     "Genre": "Műfaj",
     "All": "Minden",
@@ -31,7 +33,7 @@
     "Soap": "Szappanopera",
     "Special Interest": "Speciális témák",
     "Sport": "Sport",
-    "Suspense": "Feszültség",
+    "Suspense": "Felfüggeszés",
     "Talk Show": "Talk Show",
     "Thriller": "Thriller",
     "Western": "Western",
