--- a/app.nw/src/app/language/id.json
+++ b/app.nw/src/app/language/id.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Memulai PopcornTime. Silahkan tunggu...",
     "Status: Checking Database...": "Status: Memeriksa Basisdata...",
     "Movies": "Film",
-    "TV Series": "Serial TV",
+    "Movies ": "Film",
+    "Movies  ": "Film",
+    "Series": "Serial TV",
     "Anime": "Anime",
     "Genre": "Genre",
     "All": "Semua",
