--- a/app.nw/src/app/language/is.json
+++ b/app.nw/src/app/language/is.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Ræsi Popcorn Tme. Vinsamlegst hinkrið...",
     "Status: Checking Database...": "Staða: Athuga gagnagrunn...",
     "Movies": "Kvikmyndir",
-    "TV Series": "Sjónvarpsþættir",
+    "Movies ": "Kvikmyndir",
+    "Movies  ": "Kvikmyndir",
+    "Series": "Sjónvarpsþættir",
     "Anime": "Anime",
     "Genre": "Þema",
     "All": "Vinsælt",
