--- a/app.nw/src/app/language/it.json
+++ b/app.nw/src/app/language/it.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Inizializzazione di PopcornTime. Attendere prego...",
     "Status: Checking Database...": "Stato: controllo del database in corso...",
     "Movies": "Film",
-    "TV Series": "Serie TV",
+    "Movies ": "Film",
+    "Movies  ": "Film",
+    "Series": "Serie TV",
     "Anime": "Anime",
     "Genre": "Genere",
     "All": "Tutti",
