--- a/app.nw/src/app/language/ka.json
+++ b/app.nw/src/app/language/ka.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "PopcornTime ირთვება. გთხოვთ მოიცდაოთ...",
     "Status: Checking Database...": "სტატუსი: მონაცემთა ბაზის შემოწმება...",
     "Movies": "ფილმები",
-    "TV Series": "ტელესერიალები",
+    "Movies ": "ფილმები",
+    "Movies  ": "ფილმები",
+    "Series": "ტელესერიალები",
     "Anime": "ანიმე",
     "Genre": "ჟანრი",
     "All": "ყველა",
