--- a/app.nw/src/app/language/ko.json
+++ b/app.nw/src/app/language/ko.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "PopcornTime 시작 하는 중. 잠시만 기다리세요...",
     "Status: Checking Database...": "상태: 데이터베이스 검사 중...",
     "Movies": "영화",
-    "TV Series": "TV 시리즈",
+    "Movies ": "영화",
+    "Movies  ": "영화",
+    "Series": "TV 시리즈",
     "Anime": "일본 애니메이션",
     "Genre": "장르",
     "All": "전체",
