--- a/app.nw/src/app/language/lt.json
+++ b/app.nw/src/app/language/lt.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Inicijuojamas PopcornTime. Prašome palaukti..",
     "Status: Checking Database...": "Būsena: Tikrinama duomenų bazė...",
     "Movies": "Filmai",
-    "TV Series": "TV serialai",
+    "Movies ": "Filmai",
+    "Movies  ": "Filmai",
+    "Series": "TV serialai",
     "Anime": "Anime",
     "Genre": "Žanras",
     "All": "Visi",
@@ -71,7 +73,7 @@
     "Connect to %s to automatically 'scrobble' episodes you watch in %s": "Connect to %s to automatically 'scrobble' episodes you watch in %s",
     "Username": "Vartotojo vardas",
     "Password": "Slaptažodis",
-    "Popcorn Time stores an encrypted hash of your password in your local database": "Popcorn Time saugo užšifruotą slaptažodžio hešą lokalioje duomenų bazėje.",
+    "Popcorn Time stores an encrypted hash of your password in your local database": "Popcorn Time stores an encrypted hash of your password in your local database",
     "Remote Control": "Nuotolinis valdymas",
     "HTTP API Port": "HTTP API prievadas",
     "HTTP API Username": "HTTP API vartotojo vardas",
@@ -124,7 +126,7 @@
     "Episodes": "Epizodai",
     "Episode %s": "Epizodas %s",
     "Aired Date": "Premjeros data",
-    "Streaming to": "Transliuojama į",
+    "Streaming to": "Streaming to",
     "connecting": "Prisijungiama",
     "Download": "Atsiuntimas",
     "Upload": "Išsiuntimas",
@@ -139,10 +141,10 @@
     "Ended": "Baigėsi",
     "Error loading data, try again later...": "Klaida įkeliant duomenis, prašome pabandyti dar kartą vėliau...",
     "Miscellaneous": "Įvairūs",
-    "When opening TV Show Detail Jump to:": "Kai atidaroma TV laidos informacija, pereiti į",
+    "When opening TV Show Detail Jump to:": "When opening TV Show Detail Jump to:",
     "First Unwatched Episode": "Pirmas neperžiūrėtas epizodas",
     "Next Episode In Series": "Kitas serialo epizodas",
-    "When Opening TV Show Detail Jump To": "Kai atidaroma TV laidos informacija, pereiti į:",
+    "When Opening TV Show Detail Jump To": "When Opening TV Show Detail Jump To",
     "Flushing...": "Valoma...",
     "Are you sure?": "Ar įsitikinęs?",
     "We are flushing your databases": "Valomos duomenų bazės",
@@ -152,7 +154,7 @@
     "Terms of Service": "Paslaugų teikimo sąlygos",
     "I Accept": "Aš sutinku",
     "Leave": "Išeiti",
-    "When Opening TV Series Detail Jump To": "Kai atidaroma TV laidos informacija, pereiti į",
+    "When Opening TV Series Detail Jump To": "When Opening TV Series Detail Jump To",
     "Health Medium": "Health Medium",
     "Playback": "Atkūrimas",
     "Play next episode automatically": "Atkurti kitą epizodą automatiškai",
