--- a/app.nw/src/app/language/mk.json
+++ b/app.nw/src/app/language/mk.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Popcorn Time започнува. Почекајте...",
     "Status: Checking Database...": "Статус: Проверувам база на податоци...",
     "Movies": "Филмови",
-    "TV Series": "ТВ Серии",
+    "Movies ": "Филмови",
+    "Movies  ": "Филмови",
+    "Series": "ТВ Серии",
     "Anime": "Аниме",
     "Genre": "Жанр",
     "All": "Сите",
