--- a/app.nw/src/app/language/ms.json
+++ b/app.nw/src/app/language/ms.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Mengawalkan PopcornTime. Tunggu Sebentar...",
     "Status: Checking Database...": "Status: Memeriksa Pangkalan Data...",
     "Movies": "Cereka",
-    "TV Series": "Siri TV",
+    "Movies ": "Cereka",
+    "Movies  ": "Cereka",
+    "Series": "Siri TV",
     "Anime": "Anime",
     "Genre": "Genre",
     "All": "Semua",
