--- a/app.nw/src/app/language/nb.json
+++ b/app.nw/src/app/language/nb.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Gjør klar Popcorn Time. Vennligst vent...",
     "Status: Checking Database...": "Status: Sjekker database...",
     "Movies": "Filmer",
-    "TV Series": "TV-serier",
+    "Movies ": "Filmer",
+    "Movies  ": "Filmer",
+    "Series": "TV-serier",
     "Anime": "Anime",
     "Genre": "Sjanger",
     "All": "Alle",
