--- a/app.nw/src/app/language/nl.json
+++ b/app.nw/src/app/language/nl.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "PopcornTime initialiseren, een ogenblik geduld...",
     "Status: Checking Database...": "Status: database controleren...",
     "Movies": "Films",
-    "TV Series": "Tv-series",
+    "Movies ": "Films",
+    "Movies  ": "Films",
+    "Series": "Tv-series",
     "Anime": "Anime",
     "Genre": "Genre",
     "All": "Alle",
