--- a/app.nw/src/app/language/nn.json
+++ b/app.nw/src/app/language/nn.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Startar PopcornTime. Vær venleg vent...",
     "Status: Checking Database...": "Status: Sjekker database...",
     "Movies": "Filmar",
-    "TV Series": "TV-seriar",
+    "Movies ": "Filmar",
+    "Movies  ": "Filmar",
+    "Series": "TV-seriar",
     "Anime": "Anime",
     "Genre": "Sjanger",
     "All": "Alle",
