--- a/app.nw/src/app/language/pl.json
+++ b/app.nw/src/app/language/pl.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Uruchamianie aplikacji. Proszę czekać...",
     "Status: Checking Database...": "Status: Sprawdzanie bazy danych...",
     "Movies": "Filmy",
-    "TV Series": "Seriale",
+    "Movies ": "Filmy",
+    "Movies  ": "Filmy",
+    "Series": "Seriale",
     "Anime": "Anime",
     "Genre": "Gatunek",
     "All": "Wszystkie",
