--- a/app.nw/src/app/language/pt-br.json
+++ b/app.nw/src/app/language/pt-br.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Iniciando PopcornTime. Por favor, aguarde...",
     "Status: Checking Database...": "Status: Verificando banco de dados...",
     "Movies": "Filmes",
-    "TV Series": "Séries de TV",
+    "Movies ": "Filmes",
+    "Movies  ": "Filmes",
+    "Series": "Séries de TV",
     "Anime": "Anime",
     "Genre": "Gênero",
     "All": "Tudo",
