--- a/app.nw/src/app/language/pt.json
+++ b/app.nw/src/app/language/pt.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "A iniciar o Popcorn Time. Por favor, aguarda...",
     "Status: Checking Database...": "Estado: A verificar a base de dados...",
     "Movies": "Filmes",
-    "TV Series": "Séries",
+    "Movies ": "Filmes",
+    "Movies  ": "Filmes",
+    "Series": "Séries",
     "Anime": "Animes",
     "Genre": "Género",
     "All": "Todos",
