--- a/app.nw/src/app/language/ro.json
+++ b/app.nw/src/app/language/ro.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Se inițializează PopcornTime. Vă rugăm să așteptați...",
     "Status: Checking Database...": "Stare: Se verifică baza de date...",
     "Movies": "Filme",
-    "TV Series": "Seriale TV",
+    "Movies ": "Filme",
+    "Movies  ": "Filme",
+    "Series": "Seriale TV",
     "Anime": "Anime",
     "Genre": "Gen",
     "All": "Toate",
