--- a/app.nw/src/app/language/ru.json
+++ b/app.nw/src/app/language/ru.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Загрузка PopcornTime. Пожалуйста, подождите…",
     "Status: Checking Database...": "Состояние: Проверка базы данных…",
     "Movies": "Фильмы",
-    "TV Series": "Сериалы",
+    "Movies ": "Фильмы",
+    "Movies  ": "Фильмы",
+    "Series": "Сериалы",
     "Anime": "Аниме",
     "Genre": "Жанр",
     "All": "Все",
