--- a/app.nw/src/app/language/sk.json
+++ b/app.nw/src/app/language/sk.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Spúštam Popcorn Time. Prosím, čakajte...",
     "Status: Checking Database...": "Status: Kontrolujem databázu...",
     "Movies": "Filmy",
-    "TV Series": "Seriály",
+    "Movies ": "Filmy",
+    "Movies  ": "Filmy",
+    "Series": "Seriály",
     "Anime": "Anime",
     "Genre": "Žáner",
     "All": "Všetko",
