--- a/app.nw/src/app/language/sr.json
+++ b/app.nw/src/app/language/sr.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "PopcornTime се покреће. Молимо сачекајте...",
     "Status: Checking Database...": "Стање: проверавам базу података...",
     "Movies": "Филмови",
-    "TV Series": "ТВ Серије",
+    "Movies ": "Филмови",
+    "Movies  ": "Филмови",
+    "Series": "ТВ Серије",
     "Anime": "Аниме",
     "Genre": "Жанр",
     "All": "све",
