--- a/app.nw/src/app/language/sv.json
+++ b/app.nw/src/app/language/sv.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Initiera Popcorn Time. Vänta...",
     "Status: Checking Database...": "Status: Kontrollerar databas...",
     "Movies": "Filmer",
-    "TV Series": "Serier",
+    "Movies ": "Filmer",
+    "Movies  ": "Filmer",
+    "Series": "Serier",
     "Anime": "Anime",
     "Genre": "Genre",
     "All": "Allt",
