--- a/app.nw/src/app/language/tr.json
+++ b/app.nw/src/app/language/tr.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "PopcornTime Başlatılıyor. Lütfen Bekleyin…",
     "Status: Checking Database...": "Durum: Veri tabanı kontrol ediliyor...",
     "Movies": "Filmler",
-    "TV Series": "Diziler",
+    "Movies ": "Filmler",
+    "Movies  ": "Filmler",
+    "Series": "Diziler",
     "Anime": "Anime",
     "Genre": "Tür",
     "All": "Hepsi",
@@ -68,7 +70,7 @@
     "Show movie quality on list": "Film kalitesini listede göster",
     "Trakt.tv": "Trakt.tv",
     "Enter your Trakt.tv details here to automatically 'scrobble' episodes you watch in Popcorn Time": "Popcorn Time'daki bölümlerinizin otomatik olarak 'izlendi olarak işaretlenmesi' için Trakt.tv bilgilerinizi girin",
-    "Connect to %s to automatically 'scrobble' episodes you watch in %s": "%s bağlantısı ile, %s üzerinden izlediğiniz bölümleri otomatik olarak paylaşabilirsiniz",
+    "Connect to %s to automatically 'scrobble' episodes you watch in %s": "%s bağlantısı ile, %s üzerinden izlediğiniz bölümleri otomatik olarak 'skroplayabilirsiniz'",
     "Username": "Kullanıcı Adı",
     "Password": "Şifre",
     "Popcorn Time stores an encrypted hash of your password in your local database": "Popcorn Time, yerel veritabanınızda parolanızın şifrelenmiş özütünü saklar",
@@ -488,7 +490,7 @@
     "Playing Next": "Sıradaki Oynatılıyor",
     "Trending": "Popüler",
     "Remember Filters": "Filtreleri Hatırla",
-    "Automatic Subtitle Uploading": "Otomatik Altyazı Yükleme",
+    "Automatic Subtitle Uploading": "Otomatik Altyazı Gönderme",
     "See-through Background": "Şeffaf Arkaplan",
     "Bold": "Kalın",
     "Currently watching": "Şimdi izleniyor",
