--- a/app.nw/src/app/language/uk.json
+++ b/app.nw/src/app/language/uk.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Ініціалізація PopcornTime. Будь ласка, зачекайте...",
     "Status: Checking Database...": "Статус: Перевірка бази даних...",
     "Movies": "Фільми",
-    "TV Series": "Серіали",
+    "Movies ": "Фільми",
+    "Movies  ": "Фільми",
+    "Series": "Серіали",
     "Anime": "Аніме",
     "Genre": "Жанр",
     "All": "Усі",
