--- a/app.nw/src/app/language/zh-cn.json
+++ b/app.nw/src/app/language/zh-cn.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Popcorn Time 正在初始化，请稍候...",
     "Status: Checking Database...": "状态：检查数据文件...",
     "Movies": "电影",
-    "TV Series": "电视剧",
+    "Movies ": "电影",
+    "Movies  ": "电影",
+    "Series": "电视剧",
     "Anime": "动漫",
     "Genre": "类型",
     "All": "所有",
