--- a/app.nw/src/app/language/zh-tw.json
+++ b/app.nw/src/app/language/zh-tw.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "正在初始化 PopcornTime。請稍候...",
     "Status: Checking Database...": "狀態：正在檢查資料庫...",
     "Movies": "電影",
-    "TV Series": "電視劇",
+    "Movies ": "電影",
+    "Movies  ": "電影",
+    "Series": "電視劇",
     "Anime": "動畫",
     "Genre": "類型",
     "All": "所有",
