--- a/app.nw/src/app/language/es-mx.json
+++ b/app.nw/src/app/language/es-mx.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Iniciando Popcorn Time. Espera por favor...",
     "Status: Checking Database...": "Estado: Verificando la base de datos...",
     "Movies": "Películas",
-    "TV Series": "Series",
+    "Movies ": "Películas",
+    "Movies  ": "Películas",
+    "Series": "Series",
     "Anime": "Anime",
     "Genre": "Género",
     "All": "Todo",
