--- a/app.nw/src/app/language/sl.json
+++ b/app.nw/src/app/language/sl.json
@@ -5,7 +5,9 @@
     "Initializing PopcornTime. Please Wait...": "Pripravljam PopcornTime. Prosim počakajte ...",
     "Status: Checking Database...": "Stanje: Preverjanje Baze Podatkov...",
     "Movies": "Filmi",
-    "TV Series": "TV Serije",
+    "Movies ": "Filmi",
+    "Movies  ": "Filmi",
+    "Series": "TV Serije",
     "Anime": "Anime",
     "Genre": "Zvrsti",
     "All": "Vse",
@@ -491,14 +493,14 @@
     "Automatic Subtitle Uploading": "Samodejno oddajanje podnapisov",
     "See-through Background": "See-through Background",
     "Bold": "Bold",
-    "Currently watching": "Trenutno gledate",
+    "Currently watching": "Currently watching",
     "No, it's not that": "No, it's not that",
-    "Correct": "Pravilno",
+    "Correct": "Correct",
     "Error converting subtitle": "Error converting subtitle",
     "Try another subtitle or drop one in the player": "Try another subtitle or drop one in the player",
     "Local": "Local",
     "Error reading subtitle timings, file seems corrupted": "Error reading subtitle timings, file seems corrupted",
-    "No subtitles found": "Podnapisi niso najdeni",
+    "No subtitles found": "No subtitles found",
     "Try again later or drop a subtitle in the player": "Try again later or drop a subtitle in the player",
     "Unknown subtitle format": "Unknown subtitle format"
 }
